[package]
name = "observable-rs"
version = "0.3.0"
authors = ["Edvo Inc"]
edition = "2018"
license = "MIT/Apache-2.0"
description = "A general purpose observable library"

categories = ["web-programming"]
exclude = [".github", "rustfmt.toml"]
keywords = ["javascript", "html", "react", "observable"]
readme = "README.md"
repository = "https://github.com/mindbeam/observable-rs"

[dependencies]
