[package]
name = "your_wasm_crate"
version = "0.1.0"
authors = ["Daniel Norman <daniel@danielnorman.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
wasm-bindgen-test = "0.3"
observable-rs = { path = "../../../observable", version = "0.0.1" }
observable-react = { path = "../../../react", version = "0.0.1" }